tests/compile_fail/logic_macro_malformed_cover.stderr
error: expected `:`
 --> tests/compile_fail/logic_macro_malformed_cover.rs:6:25
  |
6 |             cover count = count.value();
  |                         ^
